--- a/index.html
+++ b/index.html
@@ -358,6 +358,18 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
+                <img src="./assets/strategy/age-of-empires-ii.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Age of Empires II</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="#">
                 <img src="./assets/strategy/age-of-empires-iii.jpg" alt="" />
               </a>
               <div class="box-text">
