--- a/strategy.html
+++ b/strategy.html
@@ -46,8 +46,13 @@
             <li><a href="infant.html">Infantil</a></li>
             <li><a href="simulation.html">Simulação</a></li>
             <li><a href="shooting.html">Tiro/Guerra</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
-          target="_blank">Lista Completa</a></li>
+            <li>
+              <a
+                href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
+                target="_blank"
+                >Lista Completa</a
+              >
+            </li>
           </div>
         </div>
 
@@ -67,11 +72,21 @@
         <h2>Estratégia</h2>
       </div>
       <!-- Content -->
-      <!-- Box -->
       <div class="games-content">
+        <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/age-of-empires-iii.jpg" alt=""/>
+            <img src="./assets/strategy/age-of-empires-ii.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Age of Empires II</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/age-of-empires-iii.jpg" alt="" />
           </a>
           <div class="box-text">
             <h2>Age of Empires III</h2>
@@ -81,7 +96,7 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/age-of-mythology.jpg" alt=""/>
+            <img src="./assets/strategy/age-of-mythology.jpg" alt="" />
           </a>
           <div class="box-text">
             <h2>Age of Mythology</h2>
@@ -91,52 +106,58 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/age-of-mythology-tale-of-the-dragon.jpg" alt=""/>
+            <img
+              src="./assets/strategy/age-of-mythology-tale-of-the-dragon.jpg"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>Age of Mythology Tale of the Dragon</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Age of Mythology Tale of the Dragon</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/age-of-mythology-the-titans.jpg" alt=""/>
+            <img
+              src="./assets/strategy/age-of-mythology-the-titans.jpg"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>Age of Mythology The Titans</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Age of Mythology The Titans</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/anno-1404.jpg" alt=""/>
+            <img src="./assets/strategy/anno-1404.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Anno 1404</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Anno 1404</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/anno-1701.jpg" alt=""/>
+            <img src="./assets/strategy/anno-1701.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Anno 1701</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Anno 1701</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/strategy/anno-1800.jpg" alt=""/>
+            <img src="./assets/strategy/anno-1800.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Anno 1800</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Anno 1800</h2>
+            <h3>-</h3>
+          </div>
         </div>
       </div>
     </section>
