--- a/action.html
+++ b/action.html
@@ -46,8 +46,13 @@
             <li><a href="infant.html">Infantil</a></li>
             <li><a href="simulation.html">Simulação</a></li>
             <li><a href="shooting.html">Tiro/Guerra</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
-          target="_blank">Lista Completa</a></li>
+            <li>
+              <a
+                href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
+                target="_blank"
+                >Lista Completa</a
+              >
+            </li>
           </div>
         </div>
 
@@ -71,7 +76,10 @@
       <div class="games-content">
         <div class="box">
           <a href="./assets/action-adventure/a-treta-dos-irmao-piologo.html">
-            <img src="./assets/action-adventure/a-treta-dos-irmao-piologo.png" alt=""/>
+            <img
+              src="./assets/action-adventure/a-treta-dos-irmao-piologo.png"
+              alt=""
+            />
           </a>
           <div class="box-text">
             <h2>A Treta dos Irmãos Piologo</h2>
@@ -81,7 +89,7 @@
         <!-- Box -->
         <div class="box">
           <a href="./assets/action-adventure/assassins-creed-1.html">
-            <img src="./assets/action-adventure/assassins-creed-1.png" alt=""/>
+            <img src="./assets/action-adventure/assassins-creed-1.png" alt="" />
           </a>
           <div class="box-text">
             <h2>Assassin's Creed</h2>
@@ -91,202 +99,250 @@
         <!-- Box -->
         <div class="box">
           <a href="./assets/action-adventure/bad-day-in-LA.html">
-            <img src="./assets/action-adventure/bad-day-in-LA.png" alt=""/>
+            <img src="./assets/action-adventure/bad-day-in-LA.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Bad Day in LA</h2>
-              <h3>PC</h3>
-            </div>
+          <div class="box-text">
+            <h2>Bad Day in LA</h2>
+            <h3>PC</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="./assets/action-adventure/far-cry.html">
-            <img src="./assets/action-adventure/far-cry.webp" alt=""/>
+            <img src="./assets/action-adventure/far-cry.webp" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Far Cry</h2>
-              <h3>PC</h3>
-            </div>
+          <div class="box-text">
+            <h2>Far Cry</h2>
+            <h3>PC</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/far-cry-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Far Cry 2</h2>
+            <h3>PC</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/far-cry-3.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Far Cry 3</h2>
+            <h3>PC</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/action-adventure/far-cry-4.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Far Cry 4</h2>
+            <h3>PC</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="./assets/action-adventure/just-cause.html">
-            <img src="./assets/action-adventure/just-cause.png" alt=""/>
+            <img src="./assets/action-adventure/just-cause.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Just Cause</h2>
-              <h3>PC/PS2/Xbox/Xbox 360</h3>
-            </div>
+          <div class="box-text">
+            <h2>Just Cause</h2>
+            <h3>PC/PS2/Xbox/Xbox 360</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="./assets/action-adventure/just-cause-2.html">
-            <img src="./assets/action-adventure/just-cause-2.png" alt=""/>
+            <img src="./assets/action-adventure/just-cause-2.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Just Cause 2</h2>
-              <h3>PC/PS3/Xbox 360</h3>
-            </div>
+          <div class="box-text">
+            <h2>Just Cause 2</h2>
+            <h3>PC/PS3/Xbox 360</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-batman.png" alt=""/>
+            <img src="./assets/action-adventure/lego-batman.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>LEGO Batman</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Batman</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-indiana-jones.png" alt=""/>
+            <img
+              src="./assets/action-adventure/lego-indiana-jones.png"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>LEGO Indiana Jones</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Indiana Jones</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-indiana-jones2.png" alt=""/>
+            <img
+              src="./assets/action-adventure/lego-indiana-jones2.png"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>LEGO Indiana Jones 2</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Indiana Jones 2</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-marvel-super-heroes.png" alt=""/>
+            <img
+              src="./assets/action-adventure/lego-marvel-super-heroes.png"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>LEGO Marvel Super Heroes</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Marvel Super Heroes</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-pirates-of-the-caribbean.png" alt=""/>
+            <img
+              src="./assets/action-adventure/lego-pirates-of-the-caribbean.png"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>LEGO Pirates of the Caribbean</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Pirates of the Caribbean</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-star-wars.png" alt=""/>
+            <img src="./assets/action-adventure/lego-star-wars.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>LEGO Star Wars</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Star Wars</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-star-wars2.webp" alt=""/>
+            <img src="./assets/action-adventure/lego-star-wars2.webp" alt="" />
           </a>
-            <div class="box-text">
-              <h2>LEGO Star Wars II</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Star Wars II</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/lego-star-wars3.png" alt=""/>
+            <img src="./assets/action-adventure/lego-star-wars3.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>LEGO Star Wars III</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>LEGO Star Wars III</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/mafia.webp" alt=""/>
+            <img src="./assets/action-adventure/mafia.webp" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Mafia</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Mafia</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/mafia-2.png" alt=""/>
+            <img src="./assets/action-adventure/mafia-2.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Mafia II</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Mafia II</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/mouth-defender.png" alt=""/>
+            <img src="./assets/action-adventure/mouth-defender.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Mouth Defender</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Mouth Defender</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/tom-clancys-the-division.jpg" alt=""/>
+            <img
+              src="./assets/action-adventure/tom-clancys-the-division.jpg"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>Tom Clancy's The Division</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Tom Clancy's The Division</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/tomb-raider.jpg" alt=""/>
+            <img src="./assets/action-adventure/tomb-raider.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Tomb Raider</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Tomb Raider</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/tomb-raider-legend.png" alt=""/>
+            <img
+              src="./assets/action-adventure/tomb-raider-legend.png"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>Tomb Raider - Legend</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Tomb Raider - Legend</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/watch-dogs.webp" alt=""/>
+            <img src="./assets/action-adventure/watch-dogs.webp" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Watch Dogs</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Watch Dogs</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/action-adventure/watch-dogs-2.jpg" alt=""/>
+            <img src="./assets/action-adventure/watch-dogs-2.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Watch Dogs 2</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Watch Dogs 2</h2>
+            <h3>-</h3>
+          </div>
         </div>
       </div>
     </section>
