--- a/racing.html
+++ b/racing.html
@@ -319,6 +319,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/mad-riders.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Mad Riders</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/madagascar-kartz.jpg" alt="" />
           </a>
           <div class="box-text">
