--- a/shooting.html
+++ b/shooting.html
@@ -1267,6 +1267,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/shooting/tom-clancys-h.a.w.x" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's H.A.W.X</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img
               src="./assets/shooting/tom-clancy's-rainbow-six-lockdown.jpg"
               alt=""
