--- a/racing.html
+++ b/racing.html
@@ -389,6 +389,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/racing/mini-motor-racing-X.webp" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Mini Motor Racing X</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/moto-GP-3.jpg" alt="" />
           </a>
           <div class="box-text">
