--- a/infant.html
+++ b/infant.html
@@ -46,8 +46,13 @@
             <li><a href="infant.html">Infantil</a></li>
             <li><a href="simulation.html">Simulação</a></li>
             <li><a href="shooting.html">Tiro/Guerra</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
-          target="_blank">Lista Completa</a></li>
+            <li>
+              <a
+                href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
+                target="_blank"
+                >Lista Completa</a
+              >
+            </li>
           </div>
         </div>
 
@@ -71,7 +76,7 @@
       <div class="games-content">
         <div class="box">
           <a href="#">
-            <img src="./assets/infant/ice-age-3.png" alt=""/>
+            <img src="./assets/infant/ice-age-3.png" alt="" />
           </a>
           <div class="box-text">
             <h2>Ice Age 3 Dawn Of The Dinosaurs</h2>
@@ -81,7 +86,7 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/infant/ice-age-4.jpeg" alt=""/>
+            <img src="./assets/infant/ice-age-4.jpeg" alt="" />
           </a>
           <div class="box-text">
             <h2>Ice Age 4 Continental Drift Arctic Games</h2>
@@ -91,32 +96,48 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/infant/ratatouille.jpg" alt=""/>
+            <img src="./assets/infant/ratatouille.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Ratatouille</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Ratatouille</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/infant/spongebob -squarepants-creature-from-the-krusty-krab.jpg" alt=""/>
+            <img
+              src="./assets/infant/spongebob -squarepants-creature-from-the-krusty-krab.jpg"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>SpongeBob SquarePants: Creature from the Krusty Krab</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>SpongeBob SquarePants: Creature from the Krusty Krab</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/infant/toy-story-3.jpg" alt=""/>
+            <img
+              src="./assets/infant/spongebob -squarepants-the-cosmic-shake.jpg"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>Toy Story 3</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>SpongeBob SquarePants: The Cosmic Shake</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/infant/toy-story-3.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Toy Story 3</h2>
+            <h3>-</h3>
+          </div>
         </div>
       </div>
     </section>
