--- a/simulation.html
+++ b/simulation.html
@@ -71,6 +71,17 @@
       <div class="games-content">
         <div class="box">
           <a href="#">
+            <img src="./assets/simulation/construction-machines-simulator-2016.jpg" alt=""/>
+          </a>
+          <div class="box-text">
+            <h2>Construction Machines Simulator 2016</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+      <!-- Box -->
+      <div class="games-content">
+        <div class="box">
+          <a href="#">
             <img src="./assets/simulation/construction-simulator-2012.jpg" alt=""/>
           </a>
           <div class="box-text">
