--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <li><a href="racing.html">Corrida</a></li>
             <li><a href="sport.html">Esporte</a></li>
             <li><a href="strategy.html">Estratégia</a></li>
-            <li><a href="#infant">Infantil</a></li>
-            <li><a href="#simulation">Simulação</a></li>
+            <li><a href="infant.html">Infantil</a></li>
+            <li><a href="simulation.html">Simulação</a></li>
             <li><a href="shooting.html">Tiro/Guerra</a></li>
             <li>
               <a
