--- a/action.html
+++ b/action.html
@@ -118,7 +118,7 @@
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="#">
+          <a href="./assets/action-adventure/far-cry-2.html">
             <img src="./assets/action-adventure/far-cry-2.jpg" alt="" />
           </a>
           <div class="box-text">
