--- a/assets/action-adventure/assassins-creed-1.html
+++ b/assets/action-adventure/assassins-creed-1.html
@@ -84,7 +84,8 @@
         Assassin's Creed. O jogo foi lançado para PlayStation 3 e Xbox 360 em
         novembro de 2007. O enredo se passa em uma história fictícia de eventos
         do mundo real, ocorrendo principalmente durante a Terceira Cruzada na
-        Terra Santa em 1191. O personagem do jogador é um homem moderno chamado
+        Terra Santa em 1191. <br>
+        O personagem do jogador é um homem moderno chamado
         Desmond Miles que, por meio de uma máquina chamada "Animus", revive as
         memórias genéticas de seu ancestral, Altaïr Ibn-La'Ahad. Por meio desse
         dispositivo de trama, detalhes emergem sobre uma luta milenar entre duas
@@ -94,7 +95,8 @@
         Templários), que acreditam que o controle é necessário para manter a
         paz. Ambas as facções lutam por artefatos poderosos de origens
         misteriosas conhecidos como "Peças do Éden" para ganhar vantagem uma
-        sobre a outra. A parte do século XII da história segue Altaïr, um
+        sobre a outra. <br>
+        A parte do século XII da história segue Altaïr, um
         Assassino, que embarca em uma busca para recuperar sua honra após não
         conseguir recuperar um desses artefatos dos Templários; ele o faz
         encontrando e assassinando nove alvos em toda a Terra Santa. O jogo
@@ -106,7 +108,7 @@
     </div>
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="../../script.js"></script>
