--- a/assets/action-adventure/far-cry-2.html
+++ b/assets/action-adventure/far-cry-2.html
@@ -109,7 +109,7 @@
     </div>
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="../../script.js"></script>
