--- a/infant.html
+++ b/infant.html
@@ -144,7 +144,7 @@
     <!-- Infant Section End-->
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="./swiper.js"></script>
