--- a/racing.html
+++ b/racing.html
@@ -567,7 +567,7 @@
     <!-- Racing Section End-->
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="./swiper.js"></script>
