--- a/sport.html
+++ b/sport.html
@@ -113,7 +113,7 @@
     <!-- Sport Section End-->
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="./swiper.js"></script>
