--- a/assets/action-adventure/a-treta-dos-irmao-piologo.html
+++ b/assets/action-adventure/a-treta-dos-irmao-piologo.html
@@ -94,7 +94,7 @@
     </div>
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="../../script.js"></script>
