--- a/simulation.html
+++ b/simulation.html
@@ -134,7 +134,7 @@
     <!-- Simulation Section End-->
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="./swiper.js"></script>
