--- a/strategy.html
+++ b/strategy.html
@@ -164,7 +164,7 @@
     <!-- Strategy Section End-->
 
     <footer>
-      <p>© 2023 - Samuel de Lima da Silva</p>
+      <p>By Samuel de Lima da Silva</p>
     </footer>
 
     <script src="./swiper.js"></script>
