--- a/shooting.html
+++ b/shooting.html
@@ -554,6 +554,19 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img
+              src="./assets/shooting/chernobyl-terrorist-attack.jpeg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Chernobyl: Terrorist Attack</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/shooting/chrome-spec-force.jpg" alt="" />
           </a>
           <div class="box-text">
