--- a/racing.html
+++ b/racing.html
@@ -452,6 +452,19 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img
+              src="./assets/racing/need-for-speed-most-wanted-2012.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed Most Wanted 2012</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img src="./assets/racing/need-for-speed-the-run.jpg" alt="" />
           </a>
           <div class="box-text">
