--- a/action.html
+++ b/action.html
@@ -123,17 +123,17 @@
           </a>
           <div class="box-text">
             <h2>Far Cry 2</h2>
-            <h3>PC</h3>
+            <h3>PC/PS3/Xbox360/XboxOne</h3>
           </div>
         </div>
         <!-- Box -->
         <div class="box">
-          <a href="#">
+          <a href="./assets/action-adventure/far-cry-3.html">
             <img src="./assets/action-adventure/far-cry-3.jpg" alt="" />
           </a>
           <div class="box-text">
             <h2>Far Cry 3</h2>
-            <h3>PC</h3>
+            <h3>PC/PS3/PS4/Xbox360/XboxOne</h3>
           </div>
         </div>
         <!-- Box -->
