--- a/action.html
+++ b/action.html
@@ -86,6 +86,20 @@
             <h3>Mobile</h3>
           </div>
         </div>
+      <!-- Box -->
+      <div class="games-content">
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/action-adventure/agent-intercept.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Agent Intercept</h2>
+            <h3>PC/PS4/PS5/Xbox One/Xbox X/NS</h3>
+          </div>
+        </div>
         <!-- Box -->
         <div class="box">
           <a href="./assets/action-adventure/assassins-creed-1.html">
